[package]
name = "rustcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
secp256k1 = "0.28"
rand = "0.8"
