[package]
name = "tencoin"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
secp256k1 = "0.28"
rand = "0.8"
warp = "0.3"
base58 = "0.2"
bech32 = "0.9"
ripemd = "0.1"
